--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
 	<title>myT</title>
 
 	<link rel='icon' type='image/png' href='/favicon.ico'>
-	<link rel='stylesheet' href='/global.css'>
+	<link rel='stylesheet' href='./global.css'>
 	<link rel='stylesheet' href='/build/bundle.css'>
 
 	<script defer src='/build/bundle.js'></script>
